# quadrivium

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA.md  MEMORY.md  PANEL_SKIPPER.md  README.md  pyproject.toml
crosswalks/: discipline_coarse.csv  discipline_fine.csv  era_b_reconstruction_rule.yaml  question_map.csv
crosswalks/_harvest/: era_a_row_labels.csv  era_b_row_labels.csv
crosswalks/_shared/: institution_identity.csv
crosswalks/fedsupport/: type_of_activity_map.csv
data/harmonized/: MANIFEST.md  fedsupport_obligations.parquet  herd_panel_attributes.parquet  herd_personnel.parquet
data/raw/: .gitignore  INVENTORY.md  MANIFEST.md
data/reference/: MANIFEST.md  dst-table-builder-FY2024-query.yaml  dst-table-builder-FY{YEAR}-query.yaml.template
docs/: hd_2_1_open_items.md  hd_2_1_scoping.md  herd_question_structure_by_year.csv  release_runbook.md
docs/fedsupport/: hd_3_2_scoping.md
docs/methods_notes/: herd_panel_etl_scoping.md  herd_personnel_README.md  herd_profile.md  reconstructive_harmonization.md
docs/source_documents/: citations.md  herd_fy24_guide.txt
etl/: _load.py  _load_fedsupport.py  build_fedsupport_identity_spine.py  build_fedsupport_obligations.py  build_herd_panel.py  build_herd_personnel.py  build_herd_profile.py  extract_herd_fy24_guide.py
etl/spikes/: _fedsupport_gate_checks.py  (+47 more)
memory/: feedback_cross_temporal_sampling.md  feedback_etl_spike_scoping.md  feedback_hd_entry_phase_budget.md  feedback_scope_expansion_vision_surface.md
seeds/: overrides.md  research-seeds.md
(+19 files in other folders)
